---
source: crates/tapir-script/compiler/src/compile/ir/optimisations.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/ir/snapshot_tests/optimisations/constant_folding/integer_folding.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.18 = int 5
x.19 = temp.18
temp.20 = int 9
y.21 = temp.20
temp.22 = x.19
temp.23 = int 6
temp.24 = temp.22 + temp.23
z.25 = temp.24
temp.26 = y.21
temp.27 = int 9
temp.28 = temp.26 + temp.27
w.29 = temp.28
temp.30 = z.25
temp.31 = w.29
temp.32 = temp.30 + temp.31
temp.33 = temp.32
storeprop temp.33, 0
return 


----------- copy_propagation -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.18 = int 5
x.19 = temp.18
temp.20 = int 9
y.21 = temp.20
temp.22 = temp.18
temp.23 = int 6
temp.24 = temp.18 + temp.23
z.25 = temp.24
temp.26 = temp.20
temp.27 = int 9
temp.28 = temp.20 + temp.27
w.29 = temp.28
temp.30 = temp.24
temp.31 = temp.28
temp.32 = temp.24 + temp.28
temp.33 = temp.32
storeprop temp.32, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.18 = int 5
temp.20 = int 9
temp.23 = int 6
temp.24 = temp.18 + temp.23
temp.27 = int 9
temp.28 = temp.20 + temp.27
temp.32 = temp.24 + temp.28
storeprop temp.32, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.18 = int 5
temp.20 = int 9
temp.23 = int 6
temp.24 = int 11
temp.27 = int 9
temp.28 = int 18
temp.32 = temp.24 + temp.28
storeprop temp.32, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.24 = int 11
temp.28 = int 18
temp.32 = temp.24 + temp.28
storeprop temp.32, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.24 = int 11
temp.28 = int 18
temp.32 = int 29
storeprop temp.32, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.32 = int 29
storeprop temp.32, 0
return
